traefik-dashboard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik-kube-system
spec:
  type: ClusterIP
  ports:
  - name: traefik
    port: 8080
    targetPort: traefik
    protocol: TCP 
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
