authelia-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: auth
spec:
  selector:
    matchLabels:
      app: authelia
  replicas: 1
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
      - name: authelia
        image: authelia/authelia:latest
        ports:
        - containerPort: 9091
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /data
      volumes:
      - name: config
        configMap:
          name: authelia-config
      - name: data
        persistentVolumeClaim:
          claimName: authelia-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: authelia-service
  namespace: auth
spec:
  selector:
    app: authelia
  ports:
  - name: http
    port: 9091
    targetPort: 9091
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia-ingress
  namespace: auth
  annotations:
    spec.ingressClassName: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: auth.picklemustard.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authelia-service
            port:
              number: 9091
