rancher-dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  namespace: cattle-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/server.passhostheader: "true"
    spec.ingressClassName: traefik
spec:
  rules:
    - host: rancher.andromeda.picklemustard.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rancher-webhook
                port:
                  number: 9443
