web-app-test-ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-app-tls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`test.andromeda.picklemustard.com`)
    kind: Rule
    services:
    - name: nginx-service
      port: 80
